# oxbow

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  justfile  limine.conf  rust-toolchain.toml  x86_64-unknown-oxbow.json
.cargo/: config.toml
abi/: Cargo.toml
abi/src/: lib.rs
docs/: HANDOFF-xterm-xfce.md  abi-v0.md  access-rules-design.md  coreutils-port-status.md  freebsd-stack-decision.md  keymap-input-blocker.md  linux-desktop-plan.md  netmap-data-plane.md  pentest-2026-06.md  porting-struggles.md  posix-compliance.md  posix-personality-plan.md  roadmap.md  rust-std-port.md  smp-arc.md  ui-toolkit.md  weston-port.md
docs/bsd-notes/: README.md  freebsd-performance.md  netbsd-portability.md  openbsd-security.md
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: channel.rs  elf.rs  fb.rs  image.rs  ipc.rs  irq.rs  main.rs  notif.rs  object.rs  pci.rs  percpu.rs  pipe.rs  proc.rs  pty.rs  rng.rs  shm.rs  smp.rs  sync.rs  syscall.rs  thread.rs  usermem.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: context.rs  gdt.rs  idt.rs  ioapic.rs  lapic.rs  mod.rs  pic.rs  pit.rs  rtc.rs  serial.rs  syscall.rs
kernel/src/mm/: mem.rs  mod.rs  pmm.rs  vm.rs
libc/: Cargo.toml  build.rs
libc/cares-config/: ares_config.h
libc/include/: assert.h  ctype.h  dirent.h  dlfcn.h  errno.h  fcntl.h  fenv.h  ifaddrs.h  inttypes.h  libgen.h  locale.h  math.h  netdb.h  poll.h  pthread.h  pwd.h  regex.h  sched.h  semaphore.h  setjmp.h  signal.h  stddef_shim.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  time.h  unistd.h
libc/include/arpa/: inet.h
libc/include/net/: if.h
libc/include/netinet/: in.h  tcp.h  udp.h
libc/include/sys/: epoll.h  eventfd.h  file.h  filio.h  ioctl.h  mman.h  param.h  select.h  signalfd.h  socket.h  sockio.h  stat.h  time.h  timerfd.h  types.h  ucontext.h  uio.h  un.h
libc/src/: cares_glue.c  lib.rs
rt/: Cargo.toml
rt/src/: lib.rs
scripts/: test_ipc_pipe.py  test_kbd_mouse_wedge.py  test_lua_shell.py
servers/awk-musl/: Cargo.toml  build.rs
servers/badge/: Cargo.toml
servers/basename/: Cargo.toml
servers/bench/: Cargo.toml  user.ld
servers/beta/: Cargo.toml
servers/beta/src/: main.rs
servers/blk/: Cargo.toml
servers/cat/: Cargo.toml
servers/cc-hello/: Cargo.toml  build.rs
servers/cc-hello/src/: hello.c  main.rs
servers/cksum/: Cargo.toml
servers/cmp/: Cargo.toml
servers/comm/: Cargo.toml
servers/cp/: Cargo.toml
servers/curl/: Cargo.toml  build.rs
servers/cut/: Cargo.toml
servers/darkhttpd-musl/: Cargo.toml  build.rs
servers/dash-musl/: Cargo.toml  build.rs
servers/dirname/: Cargo.toml
servers/doom/: Cargo.toml  build.rs
servers/doom/src/: doomgeneric_oxbow.c  main.rs
servers/drift/: Cargo.toml
servers/drift/src/: main.rs
servers/dyntest/: acc.c  add.c  build.sh  dyn.ld  dynhello.c  dyntwo.c  dyntwo.dynlist
servers/false/: Cargo.toml
servers/fb/: Cargo.toml
servers/find/: Cargo.toml
servers/fold/: Cargo.toml  build.rs
servers/fs/: Cargo.toml
servers/fsd/: Cargo.toml  build.rs
servers/fsd/src/: blockdev_glue.c  fs_ops.c  main.rs
servers/fsext/: Cargo.toml  build.rs
servers/gpu/: Cargo.toml
servers/grep/: Cargo.toml  build.rs
servers/havoc-musl/: Cargo.toml  build.rs
servers/head/: Cargo.toml
servers/hello/: Cargo.toml
servers/jail/: Cargo.toml
servers/kbd/: Cargo.toml
servers/kill/: Cargo.toml
servers/kilo-musl/: Cargo.toml  build.rs
servers/ld-oxbow/: Cargo.toml  build.rs  user.ld
servers/ls/: Cargo.toml
servers/lua/: Cargo.toml  build.rs
servers/md5sum/: Cargo.toml
servers/micropython/: Cargo.toml  build.rs
servers/mkdir/: Cargo.toml
servers/muslhello/: Cargo.toml  build.rs
servers/mv/: Cargo.toml
servers/net/: Cargo.toml
servers/net/src/: arp.rs  dhcp.rs  dns.rs  eth.rs  icmp.rs  ipv4.rs  main.rs  tcp.rs  udp.rs
servers/netcat-musl/: Cargo.toml  build.rs
servers/nl/: Cargo.toml
servers/od/: Cargo.toml
servers/oxares/: Cargo.toml  build.rs
servers/oxares/config/: ares_build.h
servers/oxares/src/: cares_glue.c  main.rs  oxmain.c  oxudp.rs
servers/oxcomp/: Cargo.toml  build.rs
servers/oxcomp/src/: comp_client.c  comp_main.c  comp_server.c  main.rs
servers/oxffi/: Cargo.toml  build.rs
servers/oxft/: Cargo.toml  build.rs
servers/oxterm/: Cargo.toml  build.rs
servers/oxui/: build-so.sh  dynlink.rs  ffi_stub.c  mem.c  oxui.c  oxui.ver  oxui_text.c
servers/oxvterm/: Cargo.toml  build.rs
servers/oxwl/: Cargo.toml  build.rs  config.h
servers/oxxkb/: Cargo.toml  build.rs
servers/paste/: Cargo.toml
servers/pong/: Cargo.toml
servers/pong/src/: main.rs
servers/printf/: Cargo.toml
servers/ps/: Cargo.toml
servers/quickjs/: Cargo.toml  build.rs
servers/rev/: Cargo.toml
servers/rm/: Cargo.toml
servers/seq/: Cargo.toml
servers/serial/: Cargo.toml  build.rs
servers/sha1sum/: Cargo.toml
servers/sha224sum/: Cargo.toml
servers/sha256sum/: Cargo.toml
servers/sha384sum/: Cargo.toml
servers/sha512-224sum/: Cargo.toml
servers/sha512-256sum/: Cargo.toml
servers/sha512sum/: Cargo.toml
servers/shell/: Cargo.toml  build.rs
servers/shell/csrc/: luaglue.c  ox_lua_io.h
servers/shell/src/: main.rs
servers/sleep/: Cargo.toml
servers/sort/: Cargo.toml
servers/spin/: Cargo.toml
servers/split/: Cargo.toml
servers/strings/: Cargo.toml
servers/sysmon/: Cargo.toml  build.rs  user-dyn.ld
servers/sysmon/src/: main.rs  sysmon.c
servers/tac/: Cargo.toml
servers/tail/: Cargo.toml
servers/tcc/: Cargo.toml  README.md  build.rs
servers/tee/: Cargo.toml
servers/thrtest/: Cargo.toml
servers/touch/: Cargo.toml
servers/tr/: Cargo.toml
servers/true/: Cargo.toml
servers/tty/: Cargo.toml
servers/twm-musl/: Cargo.toml  build.rs
servers/uniq/: Cargo.toml
servers/wc/: Cargo.toml  build.rs
std-port/: README.md  oxbow-std-backend.patch  user-tls.ld
std-port/apps/httpd/: Cargo.toml  demo.py
std-port/apps/httpd/src/: main.rs
std-port/apps/udpmtu/: Cargo.toml
std-port/apps/udpmtu/src/: main.rs
tools/: serial_expect.py  serial_probe.py  wl-scanner.py
(+260 files in other folders)
