# oxbow — a secure-minimal capability microkernel in Rust.
# Workspace root. See docs/abi-v0.md for the kernel ABI this is built around.
[workspace]
resolver = "2"
members = [
    "kernel",
    "abi",
    "rt",
    "libc",
    "servers/pong",
    "servers/beta",
    "servers/kbd",
    "servers/tty",
    "servers/shell",
    "servers/serial",
    "servers/hello",
    "servers/thrtest",
    "servers/badge",
    "servers/fs",
    "servers/cat",
    "servers/ls",
    "servers/mkdir",
    "servers/touch",
    "servers/rm",
    "servers/mv",
    "servers/cp",
    "servers/net",
    "servers/blk",
    "servers/gpu",
    "servers/fb",
    "servers/jail",
    "servers/fsext",
    "servers/fsd",
    "servers/oxares",
    "servers/oxffi",
    "servers/oxxkb",
    "servers/oxvterm",
    "servers/oxft",
    "servers/oxterm",
    "servers/oxwl",
    "servers/oxcomp",
    "servers/wlclient",
    "servers/sysmon",
    "servers/drift",
    "servers/cc-hello",
    "servers/wc",
    "servers/head",
    "servers/tail",
    "servers/find",
    "servers/grep",
    "servers/true",
    "servers/false",
    "servers/yes",
    "servers/seq",
    "servers/basename",
    "servers/dirname",
    "servers/tee",
    "servers/rev",
    "servers/cut",
    "servers/cmp",
    "servers/paste",
    "servers/fold",
    "servers/comm",
    "servers/uniq",
    "servers/tr",
    "servers/strings",
    "servers/od",
    "servers/printf",
    "servers/split",
    "servers/sleep",
    "servers/sort",
    "servers/nl",
    "servers/tac",
    "servers/cksum",
    "servers/md5sum",
    "servers/sha1sum",
    "servers/sha256sum",
    "servers/sha512sum",
    "servers/ps",
    "servers/kill",
    "servers/spin",
    "servers/tcc",
    "servers/lua",
    "servers/micropython",
    "servers/quickjs",
    "servers/curl",
    # "tools/*",  # initrd packer, etc.
]
# Servers are excluded from the default build because they need a DIFFERENT
# codegen (no kernel code-model) and link layout. Build them explicitly with
# their own RUSTFLAGS (see `just build-server`); a bare `cargo build` only
# touches the kernel side.
default-members = ["kernel", "abi", "rt"]

[workspace.package]
edition = "2021"
license = "BSD-2-Clause"
authors = ["Bryson Allen"]
repository = "https://github.com/FancyWaifu/oxbow"

# Bare-metal: no unwinding runtime exists, so panics must abort everywhere.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
