[package]
name = "oxbow-libc"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "oxbow_libc"
path = "src/lib.rs"
# rlib: consumed by Rust C-program crates (cc-hello, tcc). staticlib: a `.a`
# archive tcc can statically LINK to produce a standalone ELF on oxbow (it bundles
# rt+libc+core — _start, oxbow_main, printf, malloc, the syscall stubs — leaving
# only the user's `main` undefined). Arc 3 of self-hosting.
crate-type = ["rlib", "staticlib"]

[features]
# The spawned-program entry (_start -> oxbow_main -> C main, argv + tty stdio).
# On by default. A libc-hosted boot module disables it and supplies its own entry.
default = ["entry"]
entry = []

[dependencies]
oxbow-rt = { path = "../rt" }
oxbow-abi = { path = "../abi" }

[build-dependencies]
cc = "1"
