[package]
name = "drift"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "drift"
path = "src/main.rs"

[dependencies]
oxbow-rt = { path = "../../rt" }
oxbow-abi = { path = "../../abi" }
# Crypto for the DRIFT handshake — built with hardware SSE (see justfile).
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
blake2 = { version = "0.10", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
