[package]
name = "fsd"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "fsd"
path = "src/main.rs"

[dependencies]
# default-features = false drops libc's spawned-program entry (oxbow_main) so fsd
# can supply its own; we still get malloc/memcpy/string/etc. for lwext4.
oxbow-libc = { path = "../../libc", default-features = false }
oxbow-rt = { path = "../../rt" }
oxbow-abi = { path = "../../abi" }

[build-dependencies]
cc = "1"
