[package]
name = "net"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "net"
path = "src/main.rs"

[dependencies]
oxbow-rt = { path = "../../rt" }
oxbow-abi = { path = "../../abi" }
smoltcp = { version = "0.12", default-features = false, features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
] }
