[package]
name = "net"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "net"
path = "src/main.rs"

[dependencies]
oxbow-rt = { path = "../../rt" }
oxbow-abi = { path = "../../abi" }
smoltcp = { version = "0.12", default-features = false, features = [
    "alloc",
    "medium-ethernet",
    "medium-ip", # loopback iface (127.0.0.1) so local X clients reach Xwayland
    "multicast",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
    # Hold IPv4 + IPv6 link-local + IPv6 global at once (default cap is 2, which would
    # silently drop the global address — making on-link IPv6 dests route via the gateway).
    "iface-max-addr-count-4",
] }
