[package]
name = "oxares"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "cares-test"
path = "src/main.rs"

[dependencies]
oxbow-libc = { path = "../../libc" }
oxbow-rt = { path = "../../rt" }
oxbow-abi = { path = "../../abi" }

[build-dependencies]
cc = "1"
