[package]
name = "pong"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "pong"
path = "src/main.rs"

[features]
# Run the ABI negative-path selftests before the PONG trace (`just run-selftest`).
selftest = []

[dependencies]
oxbow-rt = { path = "../../rt" }
oxbow-abi = { path = "../../abi" }
