[package]
name = "pong"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "pong"
path = "src/main.rs"

[features]
# Run the ABI negative-path selftests before the PONG trace (`just run-selftest`).
selftest = []
# Dereference an unmapped address at startup to test fault containment.
faulttest = []
# Print our own bytes at 0x200000 (paired with beta's, to show isolation).
isolation = []

[dependencies]
oxbow-rt = { path = "../../rt" }
oxbow-abi = { path = "../../abi" }
