[package]
name = "shell"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "shell"
path = "src/main.rs"

[dependencies]
oxbow-rt = { path = "../../rt" }
oxbow-abi = { path = "../../abi" }
# Password hashing for the login gate (§44) — integer-only, no_std, no SSE.
blake2 = { version = "0.10", default-features = false }
