[package]
name = "sysmon"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "sysmon"
path = "src/main.rs"

[dependencies]
oxbow-libc = { path = "../../libc" }
oxbow-rt = { path = "../../rt" }

[build-dependencies]
cc = "1"
